@@ -709,8 +709,11 @@ the gnome Euro Conversor. It converts the currencies from the Euro countries
 to Euros and vice-versa.
 </ul>
 
-
-
+<ul>
+<li><a href="http://www.polyxmass.org">polyXmass</a>
+- a scientific program aimed at
+simulating/analyzing mass spectrometric data on a variety of polymers. 
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
