@@ -1,3 +1,7 @@
+2002-02-21  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added polyXmass.
+
 2002-02-11  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added gEuCo.
